# ai-disec-pdf

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE_REPORT.md  CORRECOES.md  DocSplit AI.lnk  LICENSE  README.md  RELEASE_REPORT.md  SECURITY_REPORT.md  SeparadorDePdf.sln  UX_REPORT.md  VERSIONING.md  docker-compose.yml  index.html  metadata.json  ocr_processor.py  package-lock.json  package.json  pdf_processor.py  server-min.cjs  server-min.js  server-minimal.cjs  server.ts  test-extraction.ps1  vite.config.test.ts  vite.config.ts
backend/: .env.example  .gitignore  Dockerfile  main.py  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
electron/: main.cjs  preload.cjs  server-launcher.cjs
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/src/: main.rs
legal/: LGPD_NOTICE.md  PRIVACY_POLICY.md  TERMS.md
publish_nonSF/: processing_history.db
scripts/: release.cjs
separador-de-notas-e-impostos-pdf/: DocSplit AI.lnk  README.md  package-lock.json  package.json  server.ts
separador-de-notas-e-impostos-pdf/electron/: main.cjs
server/: server.ts
src/: App.tsx  index.css  types.ts
src/PdfProcessorRust/: Cargo.toml
src/PdfProcessorRust/src/: main.rs
tests/: README.md  filenameOptions.test.ts  fixJSON.test.ts  fixtures.test.ts  generate-fixtures.ts  holerite-integrity.test.ts  pdfToImage.test.ts  performance-fixes.test.ts  performance.test.ts  server.test.ts  split.test.ts  zip.test.ts
(+182 files in other folders)
