[package]
name = "ocr-processor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ocr-processor"
path = "src/main.rs"

[dependencies]
image = "0.25"
leptess = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
